<?xml version="1.0"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout android:background="#006699" tools:context=".MainActivity" android:paddingBottom="@dimen/activity_vertical_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/textView"
            android:text="@string/AddEventHeader"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />

        <EditText
            android:textColorHint="#93cdf2f2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FFFFFF"
            android:id="@+id/editWho"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/textView"
            android:inputType="text"
            android:singleLine="true"
            android:layout_marginRight="-17dp"
            android:layout_toEndOf="@+id/textView26"
            android:hint="Organization / Sponsor Name"
            android:backgroundTint="#e59ca9a0"
            android:backgroundTintMode="src_in" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FFFFFF"
            android:id="@+id/editWhat"
            android:layout_alignEnd="@+id/editWho"
            android:layout_alignRight="@+id/editWho"
            android:layout_below="@+id/editWho"
            android:inputType="text"
            android:singleLine="false"
            android:layout_toRightOf="@+id/textView26"
            android:layout_toEndOf="@+id/textView26"
            android:hint="Event Title"
            android:elegantTextHeight="false"
            android:textColorHint="#93cdf2f2"
            android:backgroundTint="#e59ca9a0"
            android:backgroundTintMode="src_atop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Who"
            android:id="@+id/textView24"
            android:textColor="#FFFFFFFF"
            android:textSize="19sp"
            android:nextFocusDown="@+id/textView26"
            android:paddingLeft="25dp"
            android:layout_below="@+id/textView28"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/What"
            android:id="@+id/textView26"
            android:textColor="#FFFFFFFF"
            android:textSize="19sp"
            android:layout_alignBottom="@+id/editWhat"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="25dp"
            android:layout_marginBottom="5dp" />

        <ExpandableListView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:id="@+id/expandableList"
            android:layout_below="@+id/textView26"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_marginLeft="-10dp"
            android:descendantFocusability="beforeDescendants"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_below="@id/expandableList"
            android:id="@+id/linearLayout"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/How"
                android:id="@+id/textView39"
                android:textColor="#FFFFFFFF"
                android:textSize="19sp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="25dp"
                android:layout_marginTop="-5dp" />

            <EditText
                android:layout_height="90dp"
                android:layout_width="wrap_content"
                android:textColor="#FFFFFF"
                android:id="@+id/editHow"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:layout_marginBottom="-5dp"
                android:hint="Describe the event (optional)"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="-40dp"
                android:lines="10"
                android:minLines="4"
                android:gravity="top|left"
                android:maxLines="10"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"

                android:focusable="true"
                android:focusableInTouchMode="true"

                android:textColorHint="#93cdf2f2"
                android:backgroundTint="#e59ca9a0"
                android:backgroundTintMode="src_atop"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/MoreEvents"
                android:id="@+id/textView39"
                android:textColor="#FFFFFFFF"
                android:textSize="19sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="12dp"
                android:paddingLeft="25dp" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="76dp"
                android:textColor="#FFFFFF"
                android:id="@+id/editMoreEvents"
                android:inputType="number"
                android:singleLine="true"
                android:layout_marginBottom="26dp"
                android:layout_gravity="right"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="18dp"
                android:backgroundTint="#e59ca9a0"
                android:backgroundTintMode="src_in"/>


            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/Done"
                android:id="@+id/doneButton"
                android:width="150dp"
                android:onClick="onClick"
                android:height="50dp"
                android:textColor="#b9e1cc"
                android:background="#d8788bb1"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_marginTop="-15dp"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" is the Organization or Sponsor"
            android:id="@+id/textView28"
            android:layout_alignTop="@+id/editWho"
            android:layout_alignLeft="@+id/editWho"
            android:layout_alignStart="@+id/editWho"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="List an Event"
            android:id="@+id/textView29"
            android:textColor="#cce0f4e6"
            android:textStyle="italic"
            android:typeface="serif"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="100dp" />

        <TextView
            android:layout_width="500dp"
            android:layout_height="1dp"
            android:text=" "
            android:id="@+id/textView30"
            android:layout_below="@+id/textView29"
            android:layout_toEndOf="@+id/textView24"
            android:background="#b0f0af94"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="20dp" />

    </RelativeLayout>
</ScrollView>
