<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"

    android:id="@+id/HeaderLayout"
    >

    <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginLeft="0dp"
        android:gravity="left"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:text="When:"
        android:textSize="19sp"
        android:textAlignment="textEnd"
        android:checked="false"
        android:textColor="#FFFFFFFF"
        android:drawableBottom="#FFFFFFFF"


        />

    <TextView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/groupView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_weight="0.82"
        android:focusable="true"
        android:singleLine="true"
        android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
        android:textColor="#FFFFFF"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="#e59ca9a0"
        android:backgroundTintMode="src_in"/>

</LinearLayout>